--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "loader-utils": "^1.2.3",
     "postcss": "^7.0.11",
-    "postcss-less-engine-latest": "^1.0.0"
+    "postcss-less-engine-latest": "^1.0.0",
+    "schema-utils": "^1.0.0"
   }
 }
