--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-less-loader",
-  "version": "1.0.0",
+  "version": "0.1.0-beta",
   "description": "",
   "main": "src/index.js",
   "scripts": {
