--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-less-loader",
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0-beta.3",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "less-import-aliases": "^1.0.2",
     "loader-utils": "^1.2.3",
     "postcss": "^7.0.11",
     "postcss-less-engine-latest": "^1.0.1",
@@ -19,11 +20,9 @@
     "autoprefixer": "^9.4.5",
     "css-loader": "^2.1.0",
     "jest": "^23.6.0",
-    "less": "^3.9.0",
     "memory-fs": "^0.4.1",
     "postcss-less-engine": "^0.6.2",
     "postcss-load-config": "^2.0.0",
-    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4"
   }
