--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "postcss-less-loader",
-  "version": "0.1.0-beta.3",
+  "version": "0.1.0-beta.4",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "jest --config jest.config.js"
   },
-  "keywords": [],
+  "keywords": [
+    "css",
+    "less",
+    "postcss",
+    "webpack",
+    "webpack-loader"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
