--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-less-loader",
-  "version": "0.1.0-beta.6",
+  "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -13,7 +13,12 @@
     "webpack",
     "webpack-loader"
   ],
-  "author": "",
+  "author": "shaoyudong",
+  "repository": "shaoyudong/postcss-less-loader",
+  "bugs": {
+    "url": "https://github.com/shaoyudong/postcss-less-loader/issues"
+  },
+  "homepage": "https://github.com/shaoyudong/postcss-less-loader",
   "license": "ISC",
   "dependencies": {
     "less-import-aliases": "^1.0.2",
