--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-less-loader",
-  "version": "0.1.0@alpha.1",
+  "version": "0.1.0-alpha.2",
   "description": "",
   "main": "src/index.js",
   "scripts": {
